--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
             </div>
           </div>
           <div class="row">
-            <div class="col-md-12"><p><a class="btn btn-clear btn-clear-light btn-lg" href="#" role="button">More Projects...</a></p></div>
+            <div class="col-md-12"><p><a class="btn btn-clear btn-clear-light btn-lg" href="portfolio.html" role="button">More Projects...</a></p></div>
           </div>
         </div>
       </div>
