--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
               <div class="caption">
                 <h3>TOME</h3>
                 <p>tomenyc.com<br />Launch: June 2017</p>
-                <p><a href="tomenyc.com" target="_blank" class="btn btn-primary" role="button">Client Site</a>
+                <p><a href="http://tomenyc.com" target="_blank" class="btn btn-primary" role="button">Client Site</a>
                   <a href="portfolio/tome.html" class="btn btn-default" role="button">Project Page</a></p>
               </div>
             </div>
@@ -124,7 +124,7 @@
               <div class="caption">
                 <h3>Bento Build</h3>
                 <p>bentobuild.com<br />Launch: March 2017</p>
-                <p><a href="bentobuild.com" target="_blank" class="btn btn-primary" role="button">Client Site</a>
+                <p><a href="http://bentobuild.com" target="_blank" class="btn btn-primary" role="button">Client Site</a>
                   <a href="portfolio/bentobuild.html" class="btn btn-default" role="button">Project Page</a></p>
               </div>
             </div>
@@ -135,7 +135,7 @@
               <div class="caption">
                 <h3>Bento Box</h3>
                 <p>bentobox.com<br />Launch: October 2016</p>
-                <p><a href="bentobox.com" target="_blank" class="btn btn-primary" role="button">Client Site</a>
+                <p><a href="http://bentobox.com" target="_blank" class="btn btn-primary" role="button">Client Site</a>
                   <a href="portfolio/bentobox.html" class="btn btn-default" role="button">Project Page</a></p>
               </div>
             </div>
