--- a/index.html
+++ b/index.html
@@ -108,6 +108,17 @@
         <div class="row">
           <div class="col-md-4">
             <div class="thumbnail">
+              <img src="img/omi-portfolio-thumbnail.jpg" alt="old moulton industries thumbnail: oldmoultonindustries.com">
+              <div class="caption">
+                <h3>Old Moulton Industries</h3>
+                <p>oldmoultonindustries.com<br />Launch: July 2017</p>
+                <p><a href="http://oldmoultonindustries.com" target="_blank" class="btn btn-primary" role="button">Client Site</a>
+                  <a href="portfolio/omi.html" class="btn btn-default" role="button">Project Page</a></p>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="thumbnail">
               <img src="img/tome-portfolio-thumbnail.jpg" alt="portfolio thumbnail: tomenyc.com">
               <div class="caption">
                 <h3>TOME</h3>
@@ -125,17 +136,6 @@
                 <p>bentobuild.com<br />Launch: March 2017</p>
                 <p><a href="http://bentobuild.com" target="_blank" class="btn btn-primary" role="button">Client Site</a>
                   <a href="portfolio/bentobuild.html" class="btn btn-default" role="button">Project Page</a></p>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-4">
-            <div class="thumbnail">
-              <img src="img/bentobox-portfolio-thumbnail.jpg" alt="portfolio thumbnail: bentobox.com">
-              <div class="caption">
-                <h3>Bento Box</h3>
-                <p>bentobox.com<br />Launch: October 2016</p>
-                <p><a href="http://bentobox.com" target="_blank" class="btn btn-primary" role="button">Client Site</a>
-                  <a href="portfolio/bentobox.html" class="btn btn-default" role="button">Project Page</a></p>
               </div>
             </div>
           </div>
