--- a/portfolio.html
+++ b/portfolio.html
@@ -62,6 +62,17 @@
       <div class="row">
         <div class="col-md-4">
           <div class="thumbnail has-shadow hoverable">
+            <img src="img/omi-portfolio-thumbnail.jpg" alt="old moulton industries thumbnail: oldmoultonindustries.com">
+            <div class="caption">
+              <h3>Old Moulton Industries</h3>
+              <p>oldmoultonindustries.com<br />Launch: July 2017</p>
+              <p><a href="http://oldmoultonindustries.com" target="_blank" class="btn btn-primary" role="button">Client Site</a>
+                <a href="portfolio/omi.html" class="btn btn-default" role="button">Project Page</a></p>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="thumbnail has-shadow hoverable">
             <img src="img/tome-portfolio-thumbnail.jpg" alt="portfolio thumbnail: tomenyc.com">
             <div class="caption">
               <h3>TOME</h3>
@@ -82,6 +93,11 @@
             </div>
           </div>
         </div>
+      </div>
+    </div>
+
+    <div class="container">
+      <div class="row">
         <div class="col-md-4">
           <div class="thumbnail has-shadow hoverable">
             <img src="img/bentobox-portfolio-thumbnail.jpg" alt="portfolio thumbnail: bentobox.com">
@@ -93,11 +109,6 @@
             </div>
           </div>
         </div>
-      </div>
-    </div>
-
-    <div class="container">
-      <div class="row">
         <div class="col-md-4">
           <div class="thumbnail has-shadow hoverable">
             <img src="img/bentowahiawa-portfolio-thumbnail.jpg" alt="portfolio thumbnail: bentowahiawa.com">
@@ -119,9 +130,6 @@
                 <a href="portfolio/gbk.html" class="btn btn-default" role="button">Project Page</a></p>
             </div>
           </div>
-        </div>
-        <div class="col-md-4">
-
         </div>
       </div>
     </div>
