--- a/portfolio/omi.html
+++ b/portfolio/omi.html
@@ -93,7 +93,7 @@
             <p>Old Moulton Industries is a product/industrial design and fabrication company.</p>
 
             <h4>Specific Role</h4>
-            <p>Complete site design and development. Designed all company assets including logos, colorsets, typesets. Wrote Instagram gallery from scratch. </p>
+            <p>Complete site design and development. Designed all company assets including logos, colorsets, typesets. Site built with Bootstrap Sass and maintained on GitHub. Wrote Instagram gallery from scratch. </p>
           </div>
           <div class="col-sm-0 col-md-2"></div>
         </div>
