deleted about section from home page

--- a/index.html
+++ b/index.html
@@ -73,29 +73,9 @@
     <div id="navBarSpacer"></div>
 
     <!-- Page Content -->
-    <div id="pageContentStart" class="parallax jumbotron section-about">
-      <div class="container">
-        <div class="row">
-          <div class="col-sm-8">
-            <h1>My name is Charles King.</h1>
-              <p>I design and build web spaces.
-              My approach to creation in a digital environment is based on
-              the same principles that guide development of the physical world;
-              focus on thoughtful planning and careful deployment makes for
-              smooth project execution and effortless maintenance.
-              </p>
-          </div>
-          <div class="col-sm-4 text-center">
-            <a class="link-bright no-underline" href="mailto:cking@c9db.com">
-              <h1><i class="fa fa-envelope-open-o" aria-hidden="true"></i></h1>
-              <h4>inbox is open</h4>
-            </a>
-          </div>
-        </div>
-      </div>
-    </div>
+  
 
-    <div class="container">
+    <div id="pageContentStart" class="container">
       <div class="row section-services">
         <div class="col-sm-4">
           <i class="fa fa-paint-brush" aria-hidden="true"></i>
