--- a/index.html
+++ b/index.html
@@ -199,8 +199,8 @@
                         <li>Charles King</li>
                         <li>C9DB</li>
                         <li><a href="mailto:cking@c9db.com">cking@c9db.com</a></li>
-                        <li>Austin, TX</li>
-                        <li>Copyright &copy; C9DB 2017</li>
+                        <li>Salem, MA</li>
+                        <li>Copyright &copy; C9DB 2018</li>
                       </ul>
                       <ul class="social-link-list">
                         <li><a href="http://twitter.com/c9designbuild" target="_blank"><i class="fa fa-twitter"></i></a></li>
